[tool.poetry]
name = "miaomiaonews"
version = "0.1.0"
description = "Help you follow a news topic with the latest development!"
authors = ["xw"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
newspaper3k = "^0.2.8"
duckdb = "^0.7.1"
pandas = "^2.0.0"
pydantic = {version = "^1.10.7", extras = ["dotenv"]}
loguru = "^0.6.0"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^6.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
