[tool.poetry]
name = "miaomiaonews"
version = "0.1.0"
description = "Help you follow a news topic with the latest development!"
authors = ["xw"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
newspaper3k = "^0.2.8"
duckdb = "^0.7.1"
pandas = "^2.0.0"
pydantic = {version = "^1.10.7", extras = ["dotenv"]}
loguru = "^0.6.0"
matplotlib = "^3.7.1"
openai = "^0.27.4"
flask = "^2.0.2"
flask_login = "^0.5.0"
flask_migrate = "^3.1.0"
WTForms = "^3.0.1"
flask_wtf = "^1.0.0"
flask_sqlalchemy = "^2.5.1"
sqlalchemy= "^1.4.29"
email_validator = "^1.1.3"
jinja2 = "^3.0.3"
flask-restx = "^0.5.1"
Werkzeug = "^2.0.3"
Flask-Minify = "^0.37"
Flask-Dance = "^5.1.0"
blinker = "^1.4"
pyopenssl = "^23.1.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^6.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
